update: add endpoint for change password
